test/2/type/def-bind-ann.err
test/2/type/def-bind-ann.ploy:1:9-10: type error: annotated: actual type is not expected type. actual type: Int
| x:Str = 0
          ~
test/2/type/def-bind-ann.ploy:1:3-6: note: expected type: Str
| x:Str = 0
    ~~~
