test/2/type/def-bind-ann.ploy
x:Str = 0

main = outL.x
